--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="/Ganesh .jpg" alt="">
+                    <img src="Ganesh .jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Ganesh and <span class="typing-2">I'm a Graduate</span></div>
